testsuite/tests/ghc-regress/indexed-types/should_fail/NonLinearSigErr.hs
{-# LANGUAGE TypeFamilies #-}

module NonLinearSigErr where

type family E a b
type instance E a (a :: *) = [a]
